target specific modal-content, fix CSS spacing

--- a/css/splash_block_splash.css
+++ b/css/splash_block_splash.css
@@ -20,7 +20,7 @@
   z-index: 500;
 }
 
-.splash-block-splash, .modal-content {
+.splash-block-splash, .modal-content.splash-block {
   border-radius: 8px;
   background: #fff;
   padding: 10px;
@@ -38,7 +38,7 @@
 }
 
 .vertical-alignment-helper {
-  display:table;
+  display: table;
   height: 100%;
   width: 100%;
 }
@@ -51,8 +51,8 @@
 
 .modal-content {
   /* Bootstrap sets the size of the modal in the modal-dialog class, we need to inherit it */
-  width:inherit;
-  height:inherit;
+  width: inherit;
+  height: inherit;
   /* To center horizontally */
   margin: 0 auto;
 }
